--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,175 @@
-/*
-Colors:
+body {
+  margin: 0;
+  padding: 0;
+  font-family: proxima-nova, sans-serif;
+  font-style: normal;
+  font-weight: 100;
+}
 
-Text: 1A1A1A
-Green: #00B172
-White: #FFF
+/* Section 1 NavBar + Logo */
 
-*/
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 20px;
+}
+
+.navBar {
+  width: 600px;
+  po
+  
+}
+
+.navBarUl {
+  list-style: none;
+  font-size: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 400px;
+  padding-left: 180px;
+}
+
+.navBar a {
+  text-decoration: none;
+  color: black;
+}
+
+.logoImg {
+  width: 200px;
+}
+
+/* Section 2 MainPage + BackgroundImg */
+
+.containerMainPage {
+  height: 850px;
+  color: white;
+  background-image: url(/images/landing.jpg);
+  background-position: 0 0;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  padding-top: 50px;
+}
+
+h1 {
+  font-size: 5em;
+  text-align: center;
+  padding-top: 150px;
+}
+
+.textMainPage {
+  font-size: 2.5em;
+  text-align: center;
+  width: 900px;
+  padding-left: 250px;
+}
+
+/* Section 3 What's on Spotify */
+
+.ContainerWhatOnSpotify > div {
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.ContainerWhatOnSpotify > div > article {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.ContainerWhatOnSpotify img {
+  width: 150px;
+}
+
+.ContainerWhatOnSpotify h3 {
+  font-size: 3em;
+  text-align: center;
+  line-height: 1em;
+}
+
+.ContainerWhatOnSpotify h3::after {
+  content: "";
+  position: absolute;
+  height: 5px;
+  background: #1cb46c;
+  top: 135%;
+  width: 400px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.ContainerWhatOnSpotify h4 {
+  font-size: 2em;
+  color: #1cb46c;
+}
+
+.textContainer {
+  font-size: 1.5em;
+  width: 300px;
+  text-align: center;
+}
+
+/* Section 4 Green background */
+
+.containerGreenBackgroung {
+  background-color: #1cb46c;
+  margin: 50px;
+  height: 1000px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.containerGreenBackgroung > div > article {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: column;
+  width: 40%;
+}
+
+.containerGreenBackgroung article {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  width: 100px;
+  
+}
+
+.containerGreenBackgroung p {
+  display: flex;
+  width: 400px;
+  line-height: 1.5em;
+}
+
+.containerGreenBackgroung h3 {
+  color: white;
+  font-size: 3em;
+  line-height: 1em;
+  
+}
+
+.containerGreenBackgroung h4 {
+  color: white;
+  font-size: 2em;
+}
+
+.containerGreenBackgroung p {
+  color: white;
+  font-size: 1.5em;
+}
+
+.spotifyApp {
+  width: 400px;
+}
+
+/*.whiteIcon {
+  width: 150px;
+  position: absolute;
+} */
