--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,10 @@ body {
   font-weight: 100;
 }
 
+img {
+  width: 100%;
+  display: block;
+}
 /* Section 1 NavBar + Logo */
 
 .header {
@@ -13,12 +17,14 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 20px 20px;
+  position: sticky;
+  top: 0;
+  z-index: 2;
+  background-color: #fff;
 }
 
 .navBar {
   width: 600px;
-  po
-  
 }
 
 .navBarUl {
@@ -123,8 +129,14 @@ h1 {
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: relative;
 }
 
+.containerGreenBackgroung > div {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 .containerGreenBackgroung > div > article {
   display: flex;
   justify-content: space-evenly;
@@ -139,7 +151,6 @@ h1 {
   justify-content: space-around;
   align-items: center;
   width: 100px;
-  
 }
 
 .containerGreenBackgroung p {
@@ -152,7 +163,6 @@ h1 {
   color: white;
   font-size: 3em;
   line-height: 1em;
-  
 }
 
 .containerGreenBackgroung h4 {
@@ -165,11 +175,12 @@ h1 {
   font-size: 1.5em;
 }
 
-.spotifyApp {
-  width: 400px;
+.spotifyApp-container {
+  max-width: 300px;
 }
 
-/*.whiteIcon {
-  width: 150px;
+.whiteIcon {
+  max-width: 150px;
   position: absolute;
-} */
+  top: 50%;
+}
